<resources>
    <string name="app_name">pretest_background_and_file_processing_hafidh</string>
    <string name="handle_pdf">Handle PDF</string>
    <string name="title">File</string>
    <string name="handle_image">Handle Image</string>
    <string name="handle_video">Handle Video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_view">Web View</string>
    <string name="assets">Assets</string>
    <string name="storage">Storage</string>
    <string name="internet">Internet</string>
    <string name="toast_error">Terjadi kesalahan</string>
    <string name="toast_error_page">Error oad page</string>
    <string name="toast_download_complete">Download completed</string>
    <string name="add_image">Add Image</string>
</resources>