<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="24dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/teal_200"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPdfHandle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_bg"
        android:text="@string/handle_pdf"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnImageHandle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_bg"
        android:text="@string/handle_image"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnVideoHandle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_bg"
        android:text="@string/handle_video"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
